Adjusted joystick sensitivity.

--- a/index.html
+++ b/index.html
@@ -315,12 +315,12 @@
       powerup: new Audio('./powerUpSound.mp3')
     };
 
-    // Joystick variables for mobile controls (scoped within mobile setup)
+    // Joystick variables for mobile controls 
     let joystickActive = false;
     let joystickStartX = 0;
     let joystickStartY = 0;
     let joystickRadius = 50; 
-    let joystickSensitivity = 0.4 ; // Adjust sensitivity 
+    let joystickSensitivity = 0.6; // Adjusts sensitivity 
 
     // Initialize game
     function init() {
